<resources>
    <string name="app_name">SoftwareEngineeringTwo</string>
    <string name="project_name">E-Monitoring of Vaccination and Contact Tracking System</string>
    <string name="project_abri">E-MVCTS</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="additional_info">Additional Information</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="address">Address</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="age">Age</string>
    <string name="barangay">Barangay</string>
    <string name="phonenumber">Contact Number</string>
    <string name="birthday">Birthday</string>
    <string name="submit">Submit</string>
    <string name="proceed">Proceed</string>
    <string name="privacy_policy">By ticking this box I agree that I have read the privacy policy and consent to the given information being used by E-MVCTS.</string>
    <string name="register_entry">Dont have an account yet?</string>
    <string name="register_here">Register Here</string>
    <string name="forgot_password">Forgot Password?</string>

    <string name="verify_email_address">Verify Your Email Address</string>
    <string name="verfiy_email_address_paragraph">Please confirm that you want to use this as your E-MTVCS account email address.Once its done you will be able to log-in</string>
    <string name="verify_my_email">Verify My Email</string>
    <string name="refresh">Refresh</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">Update</string>
    <string name="verify"><u>Verify</u></string>
    <string name="email_verification">Email Verification</string>
    <string name="vaccine_status">Vaccine Status</string>
    <string name="change_profile_pic"><u>Upload Profile Picture</u></string>
</resources>