<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/register"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_firstname"
        android:layout_width="325dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/ubuntu_light"
        android:gravity="center"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/et_lastname"
        android:layout_width="325dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/ubuntu_light"
        android:hint="@string/lastname"
        android:inputType="textPersonName"
        android:gravity="center"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_firstname" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="325dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/ubuntu_light"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_phonenumber" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="325dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/ubuntu_light"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="325dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/ubuntu_light"
        android:gravity="center"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit"
        android:layout_width="159dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_confirm_password" />

    <EditText
        android:id="@+id/et_phonenumber"
        android:layout_width="325dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/ubuntu_light"
        android:gravity="center"
        android:hint="@string/phonenumber"
        android:inputType="text"
        android:maxLength="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_lastname" />

</androidx.constraintlayout.widget.ConstraintLayout>